Add map filter feature and update map view coordinates
- Added a new button in `root.component.html` to trigger the `filterMap` function.
- Replaced the commented-out `filterMap` button with an `app-filter-map` component in `root.component.html`.
- Imported `Router` and `FilterMapComponent` in `root.component.ts`.
- Added a new getter `firstPartOfUrl` to extract the first part of the URL in `root.component.ts`.
- Updated the constructor in `root.component.ts` to include `Router`.
- Commented out the subscription to `paramMap` in `ngOnInit` and added a console log for the current URL in `root.component.ts`.
- Added a new method `filterMap` in `root.component.ts` to open a dialog with `FilterMapComponent`.
- Updated the coordinates used in `mapService.setView` from `[north, east]` to `[lat, long]`.

--- a/molenapplicatie.client/src/app/root/root.component.html
+++ b/molenapplicatie.client/src/app/root/root.component.html
@@ -10,6 +10,7 @@
     </div>
     <div *ngIf="visible" class="topButton" (click)="updateMolens()">Update molens</div>
     <div *ngIf="visible" class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
+    <div *ngIf="visible" class="topButton" (click)="filterMap()">Filter map</div>
     <img class="buurmanEnBuurmanImg" src="Assets/Background/Buurman-Buurman-events.png" alt="Alternate Text" />
     <div class="icon" (click)="openInfoMenu()">
       <i class="fa fa-bars"></i>
@@ -24,6 +25,8 @@
     </div>
     <div class="topButton" (click)="updateMolens()">Update molens</div>
     <div class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
+    <!--<div class="topButton" (click)="filterMap()">Filter map</div>-->
+    <app-filter-map></app-filter-map>
     <div class="MolenImageCount"> {{getMolenWithImageAmount}} molens met een foto</div>
   </div>
   <div class="mapContainer">
