Comment out <app-loader> and add FilterMapComponent
Commented out the <app-loader> component in app.component.html,
removing the loading indicator. Imported and declared the
FilterMapComponent in app.module.ts, making it available
throughout the application.

--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-loader [isLoadingVisible]="isLoadingVisible"></app-loader>
+<!--<app-loader [isLoadingVisible]="isLoadingVisible"></app-loader>-->
 
 <router-outlet></router-outlet>
 
