Add image upload button and dialog functionality
- Added an upload button in `molen-dialog.component.html` to trigger the `uploadImage` function.
- Commented out the previous file upload section in `molen-dialog.component.html`.
- Commented out the `.data-right` CSS class and adjusted the width of `.molen-data` to 60% in `molen-dialog.component.scss`.
- Imported `MatDialog` in `molen-dialog.component.ts` and included it in the constructor.
- Added a new method `uploadImage` in `molen-dialog.component.ts` to open an image upload dialog using `UploadImageDialogComponent`.

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.scss
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.scss
@@ -21,13 +21,13 @@
   padding: 10px;
 }
 
-.data-right {
+/*.data-right {
   width: 30%;
   padding: 10px;
-}
+}*/
 
 .molen-data {
-  width: 30%;
+  width: 60%;
   overflow: hidden;
   max-height: 85vh;
   padding: 10px;
@@ -172,7 +172,7 @@
     width: 90%;
   }
 
-  .data-right {
+/*  .data-right {
     padding-bottom: 50px;
-  }
+  }*/
 }
