--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -1,5 +1,6 @@
 <section class="header" *ngIf="molen">
   <span *ngIf="molen">{{ molen.name }}</span>
+  <button (click)="uploadImage()">masdads</button>
   <div (click)="onClose()" class="container-close-btn">
 
     <div class="circle">
@@ -71,7 +72,7 @@
     </button>
   </div>
   <div class="data data-right">
-    <h2>Upload de foto hier.</h2><br />
+    <!--<h2>Upload de foto hier.</h2><br />
 
     <div *ngIf="!file" class="file-input-container">
       <input (change)="onFileSelected($event)" type="file" accept="image/*" id="fileInput" class="file-input" #fileUpload />
@@ -105,6 +106,6 @@
         <p *ngSwitchCase="'fail'">❌ Error!</p>
         <p *ngSwitchDefault>😶 Waiting to upload...</p>
       </section>
-    </div>
+    </div>-->
   </div>
 </div>
