--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -200,7 +200,7 @@ body {
 /*molen-details*/
 
 .molen-details .mdc-dialog__container {
-  background-image: url('../public/Assets/Background/pexels-fwstudio-33348-139312.jpg');
+  background-image: url('../public/Assets/Background/Molen-details-background.jpg');
   background-origin: border-box;
   background-size: cover;
   border-radius: 25% 10% / 3% 20% !important;
@@ -216,6 +216,17 @@ body {
   overflow: hidden;
 }
 
+
+.upload-image .mdc-dialog__surface {
+  overflow: hidden;
+}
+/*.upload-image .mdc-dialog__container {
+  background-image: url('../public/Assets/Background/UploadImageBackground.jpg');
+  background-origin: border-box;
+  background-size: cover;
+  border-radius: 25% 10% / 3% 20% !important;
+  color: #ffffff;
+}*/
 @media only screen and (max-width: $Media_width) {
   .molen-details .mdc-dialog__surface {
     overflow-y: scroll;
