Enhance upload dialog with new UI and functionality
Updated the HTML template to provide a comprehensive user interface for uploading images, including sections for file selection, file details, API key input, upload button, status messages, and image preview.

Styled the new HTML elements in the SCSS file to ensure a visually appealing and user-friendly interface, with specific styles for the container, image details, image preview, file input container, file input, and file label.

Extended the TypeScript component to handle the logic for file selection, image preview, API key input, and uploading the image to a server. Added error handling and success notifications to improve the user experience.

--- a/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.html
@@ -1,1 +1,38 @@
-<p>upload-image-dialog works!</p>
+<div class="container">
+  <div class="image-details">
+    <h2>Foto uploaden</h2><br />
+
+    <div *ngIf="!file" class="file-input-container">
+      <input (change)="onFileSelected($event)" type="file" accept="image/*" id="fileInput" class="file-input" #fileUpload />
+      <label for="fileInput" class="file-label">Choose File</label>
+    </div>
+
+
+    <div *ngIf="file">
+      <section class="file-info">
+        <button (click)="removeImg()" class="close-btn">&times;</button>
+        <br />
+        <strong>File details:</strong>
+        <ul>
+          <li>Naam: {{file.name}}</li>
+          <li>Type: {{file.type}}</li>
+          <li>Size: {{file.size}} bytes</li>
+        </ul>
+      </section>
+      <span>API Key: <input matInput type="text" name="username" [(ngModel)]="APIKey" autocomplete="off" /></span>
+      <button (click)="onSubmit()">Upload the file</button>
+    </div>
+    <div *ngIf="file">
+      <section [ngSwitch]="status">
+        <p *ngSwitchCase="'uploading'">⏳ Uploading...</p>
+        <p *ngSwitchCase="'success'">✅ Done!</p>
+        <p *ngSwitchCase="'fail'">❌ Error!</p>
+        <p *ngSwitchDefault>😶 Waiting to upload...</p>
+      </section>
+    </div>
+  </div>
+
+  <div class="image-preview" *ngIf="file && file.type.startsWith('image/')">
+      <img [src]="imagePreview" alt="Selected Image" width="300" />
+  </div>
+</div>
