Refactor molen-dialog UI and improve button styling
- Removed "masdads" button from molen-dialog.component.html
- Added new `actions` section with upload and close buttons
- Commented out the old upload image button
- Styled `actions` class for flexible layout and alignment
- Added comprehensive styles for `upload-image-button` class
- Implemented hover effects and transitions for buttons
- Made minor formatting adjustments for consistency in CSS

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -1,6 +1,6 @@
 <section class="header" *ngIf="molen">
   <span *ngIf="molen">{{ molen.name }}</span>
-  <button (click)="uploadImage()">masdads</button>
+  <!--<button class="upload-image-button" (click)="uploadImage()">Voeg foto toe</button>
   <div (click)="onClose()" class="container-close-btn">
 
     <div class="circle">
@@ -8,6 +8,15 @@
       <div class="line two"></div>
     </div>
 
+  </div>-->
+  <div class="actions">
+    <button class="upload-image-button" (click)="uploadImage()">Voeg foto toe</button>
+    <div (click)="onClose()" class="container-close-btn">
+      <div class="circle">
+        <div class="line one"></div>
+        <div class="line two"></div>
+      </div>
+    </div>
   </div>
 </section>
 <div class="container" *ngIf="molen">
