--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.scss
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.scss
@@ -16,6 +16,30 @@
   height: 90vh;
 }
 
+.actions {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.upload-image-button {
+  background-color: #28a745;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.upload-image-button:hover {
+  background-color: #218838;
+  transform: scale(1.05);
+}
+
 .data-left {
   width: 40%;
   padding: 10px;
@@ -40,7 +64,7 @@
 
 .molen-data.expanded {
   max-height: none;
-  overflow:scroll;
+  overflow: scroll;
 }
 
 .molen-data-div {
@@ -172,7 +196,7 @@
     width: 90%;
   }
 
-/*  .data-right {
+  /*  .data-right {
     padding-bottom: 50px;
   }*/
 }
