--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -16,7 +16,7 @@ body {
 /*Global dialog styling*/
 
 .cdk-overlay-pane.mat-mdc-dialog-panel {
-  z-index:1002;
+  z-index: 1002;
   max-width: 100vw !important;
   max-height: 95vh !important;
   position: absolute;
@@ -126,57 +126,57 @@ body {
   position: relative;
   width: fit-content;
   display: flex;
-}
 
-.circle {
-  width: 50px;
-  height: 50px;
-  background-color: white;
-  border-radius: 25px;
-  margin: auto;
-  box-shadow: 1px 1px 1px #565656;
-  position: relative;
-  transition: all .2s;
-
-  &:hover {
-    background-color: darken(black, 10%);
-    cursor: pointer;
-  }
-
-  &:hover > .one {
-    height: 45px;
-    top: 3px;
-    transition: all .5s;
+  .circle {
+    width: 50px;
+    height: 50px;
     background-color: white;
+    border-radius: 25px;
+    margin: auto;
+    box-shadow: 1px 1px 1px #565656;
+    position: relative;
+    transition: all .2s;
+
+    &:hover {
+      background-color: darken(black, 10%);
+      cursor: pointer;
+    }
+
+    &:hover > .one {
+      height: 45px;
+      top: 3px;
+      transition: all .5s;
+      background-color: white;
+    }
+
+    &:hover > .two {
+      height: 45px;
+      top: 3px;
+      transition: all .5s;
+      background-color: white;
+    }
   }
 
-  &:hover > .two {
-    height: 45px;
-    top: 3px;
+  .line {
+    height: 20px;
+    width: 3px;
+    border-radius: 2px;
+    background-color: darken(black, 20%);
+    position: absolute;
     transition: all .5s;
-    background-color: white;
   }
-}
 
-.line {
-  height: 20px;
-  width: 3px;
-  border-radius: 2px;
-  background-color: darken(black, 20%);
-  position: absolute;
-  transition: all .5s;
-}
+  .one {
+    top: 15px;
+    left: 23px;
+    transform: rotate(45deg)
+  }
 
-.one {
-  top: 15px;
-  left: 23px;
-  transform: rotate(45deg)
-}
-
-.two {
-  top: 15px;
-  left: 23px;
-  transform: rotate(-45deg)
+  .two {
+    top: 15px;
+    left: 23px;
+    transform: rotate(-45deg)
+  }
 }
 
 
@@ -228,7 +228,12 @@ body {
   color: #ffffff;
 }*/
 @media only screen and (max-width: $Media_width) {
-  .molen-details .mdc-dialog__surface {
+  .molen-details .mdc-dialog__surface,
+  .upload-image .mdc-dialog__surface {
     overflow-y: scroll;
+  }
+
+  .upload-image .mdc-dialog__surface {
+    border-radius: 30px 30px / 30px 30px !important;
   }
 }
