Refactor upload image dialog structure and styling
Updated HTML structure in `upload-image-dialog.component.html`:
- Changed class `header` to `dialog-header`.
- Moved file input and status display to new `actions` div.
- Updated close button structure for better styling.
- Wrapped API key input and upload button in new `api-key` section.

Updated SCSS in `upload-image-dialog.component.scss`:
- Removed commented-out `display: flex;` in `.container`.
- Adjusted padding for `.image-details` and `.image-preview`.
- Updated max width and height for images in `.image-preview`.
- Added new styles for `.api-key` and its child inputs.
- Made media query adjustments for responsiveness.

Updated TypeScript in `upload-image-dialog.component.ts`:
- Enhanced `uploadImage` method to clear API key, show success toast, and close dialog on success.
- Moved `complete` callback logic to `next` callback in `subscribe`.

These changes improve the component's organization, visual appeal, and user experience.

--- a/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.scss
+++ b/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.scss
@@ -1,7 +1,6 @@
 @import '../../../Utils/Variables.scss';
 
 .container {
-  /*display: flex;*/
   width: 50vw;
   height: 100vh;
   background-image: url('../../../../public/Assets/Background/UploadImageBackground.jpg');
@@ -32,7 +31,7 @@
 }
 
 .image-details, .image-preview {
-  padding: 2% 1% 1% 2%;
+  padding: 2% 1% 1% 0;
 }
 
 .image-preview {
@@ -43,10 +42,25 @@
   justify-content: center;
 
   img {
-    max-height: 56vh;
+    max-width: 94vw;
+    max-height: 65vh;
     width: auto !important;
     border-radius: 20px;
   }
+}
+
+.api-key input[type=text] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.api-key {
+  font-weight: 700;
 }
 
 .file-input-container {
@@ -109,6 +123,10 @@
     width: auto;
   }
 
+  .api-key {
+    padding: 10px;
+  }
+
   .image-preview {
     max-width: 100%;
   }
@@ -117,7 +135,6 @@
     width: 95vw;
     display: block;
     height: auto;
-    /*min-height:100vh;*/
     padding-bottom: 50px;
   }
 }
