--- a/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.html
@@ -1,25 +1,27 @@
 <div class="container">
-  <section class="header">
+  <section class="dialog-header">
     <span>Foto uploaden</span>
-    <div *ngIf="!file" class="file-input-container">
-      <input (change)="onFileSelected($event)" type="file" accept="image/*" id="fileInput" class="file-input" #fileUpload />
-      <label for="fileInput" class="file-label">Choose File</label>
-    </div>
-    <div class="status" *ngIf="file">
-      <section [ngSwitch]="status">
-        <p *ngSwitchCase="'uploading'">⏳ Uploading...</p>
-        <p *ngSwitchCase="'success'">✅ Done!</p>
-        <p *ngSwitchCase="'fail'">❌ Error!</p>
-        <p *ngSwitchDefault>😶 Waiting to upload...</p>
-      </section>
-    </div>
-    <div (click)="onClose()" class="container-close-btn">
-
-      <div class="circle">
-        <div class="line one"></div>
-        <div class="line two"></div>
+    <div class="actions">
+      <div *ngIf="!file" class="file-input-container">
+        <input (change)="onFileSelected($event)" type="file" accept="image/*" id="fileInput" class="file-input" #fileUpload />
+        <label for="fileInput" class="file-label">Choose File</label>
       </div>
+      <div class="status" *ngIf="file">
+        <section [ngSwitch]="status">
+          <p *ngSwitchCase="'uploading'">⏳ Uploading...</p>
+          <p *ngSwitchCase="'success'">✅ Done!</p>
+          <p *ngSwitchCase="'fail'">❌ Error!</p>
+          <p *ngSwitchDefault>😶 Waiting to upload...</p>
+        </section>
+      </div>
+      <div (click)="onClose()" class="container-close-btn">
 
+        <div class="circle">
+          <div class="line one"></div>
+          <div class="line two"></div>
+        </div>
+
+      </div>
     </div>
   </section>
   <section class="main">
@@ -35,8 +37,10 @@
             <li>Size: {{file.size}} bytes</li>
           </ul>-->
         </section>
-        <span>API Key: <input matInput type="text" name="username" [(ngModel)]="APIKey" autocomplete="off" /></span>
-        <button (click)="onSubmit()">Upload the file</button>
+        <section class="api-key">
+          <span>API Key: <input matInput type="text" name="username" [(ngModel)]="APIKey" autocomplete="off" /></span>
+          <button class="upload-image-button" (click)="onSubmit()">Upload the file</button>
+        </section>
       </div>
     </div>
 
