Refactor molen-dialog component and update close handling
Modified HTML template to change class from "header" to "dialog-header".
Updated SCSS to remove styles for ".header", ".actions", and ".upload-image-button".
Added a new subscription in TypeScript to handle dialog close event, updating state with new molen data and images, and setting the selected image if a new one is found.

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -1,4 +1,4 @@
-<section class="header" *ngIf="molen">
+<section class="dialog-header" *ngIf="molen">
   <span *ngIf="molen">{{ molen.name }}</span>
   <!--<button class="upload-image-button" (click)="uploadImage()">Voeg foto toe</button>
   <div (click)="onClose()" class="container-close-btn">
