fixed update marker

--- a/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
+++ b/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
@@ -1,3 +1,14 @@
+<section class="dialog-header">
+  <span>Filter map</span>
+  <div class="actions">
+    <div (click)="onClose()" class="container-close-btn">
+      <div class="circle">
+        <div class="line one"></div>
+        <div class="line two"></div>
+      </div>
+    </div>
+  </div>
+</section>
 <div>
   <label>
     <input type="radio"
