--- a/molenapplicatie.client/src/app/root/root.component.html
+++ b/molenapplicatie.client/src/app/root/root.component.html
@@ -25,8 +25,7 @@
     </div>
     <div class="topButton" (click)="updateMolens()">Update molens</div>
     <div class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
-    <!--<div class="topButton" (click)="filterMap()">Filter map</div>-->
-    <app-filter-map></app-filter-map>
+    <div class="topButton" (click)="filterMap()">Filter map</div>
     <div class="MolenImageCount"> {{getMolenWithImageAmount}} molens met een foto</div>
   </div>
   <div class="mapContainer">
