Refactor button classes and update dialog styles
Replaced `upload-image-button` with `default-button` in `molen-dialog.component.html` and `upload-image-dialog.component.html`. Added `panelClass: 'filter-map'` to `dialog.open` in `root.component.ts`. Renamed `.upload-image-button` to `.default-button` in `styles.scss` and updated styles, including hover effects. Added new styles for `.filter-map` class with background properties. Adjusted media queries for proper scrolling in `.mdc-dialog__surface` within `.molen-details` and `.upload-image` on smaller screens.

--- a/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/upload-image-dialog/upload-image-dialog.component.html
@@ -39,7 +39,7 @@
         </section>
         <section class="api-key">
           <span>API Key: <input matInput type="text" name="username" [(ngModel)]="APIKey" autocomplete="off" /></span>
-          <button class="upload-image-button" (click)="onSubmit()">Upload the file</button>
+          <button class="default-button" (click)="onSubmit()">Upload the file</button>
         </section>
       </div>
     </div>
