--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -1,7 +1,7 @@
 <section class="dialog-header" *ngIf="molen">
   <span *ngIf="molen">{{ molen.name }}</span>
   <div class="actions">
-    <button class="upload-image-button" (click)="uploadImage()">Voeg foto toe</button>
+    <button class="default-button" (click)="uploadImage()">Voeg foto toe</button>
     <div (click)="onClose()" class="container-close-btn">
       <div class="circle">
         <div class="line one"></div>
