Refactor molen handling by provincie and update routing
Reorganized import statements in MolenService.ts for readability.
Renamed and restructured disappearedMolens property.
Added getAllMolenProvincies method to fetch and cache provincies.
Renamed and modified getAllDisappearedMolens to getDisappearedMolensByProvincie.
Updated logic to handle disappeared molens by provincie.
Updated route in app-routing.module.ts to include provincie parameter.
Updated MapDisappearedMolensComponent to use ActivatedRoute for provincie.
Added provincie property to MapDisappearedMolensComponent.
Updated ngAfterViewInit in MapDisappearedMolensComponent to fetch molens by provincie.
Made minor style adjustment in styles.scss.

--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -263,6 +263,7 @@ body {
   background-image: url('../public/Assets/Background/GreyWoodBackground.jpeg');
   background-origin: border-box;
   background-size: cover;
+  background-position: right center;
 }
 
 
