--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<app-loader [isLoadingVisible]="isLoadingVisible"></app-loader>-->
+<app-loader [TimeToWait]="minimumWaitTime"></app-loader>
 
 <router-outlet></router-outlet>
 
