--- a/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
+++ b/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
@@ -21,11 +21,11 @@
   <br />
   <input type="radio"
          name="options"
-         id="remaining"
-         [value]="'remaining'"
+         id="remainder"
+         [value]="'remainder'"
          [(ngModel)]="selectedOption" />
-  <label for="remaining">
-    Remaining
+  <label for="remainder">
+    Remainder
   </label>
   <br />
   <input type="radio"
